@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}
class TableController {
    - _tableRepositories: ITableRepositories
    + GetAllTables ([FromQuery] GetTableRequestDTO request): Task<IActionResult>
}
interface ITableRepositories<<interface>>  {
    + GetAllTables(GetTableRequestDTO request): Task<(List<GetTableResponseDTO>, TablePaginationDTO)> 
}

class TableRepositories {
    - _tableDao: TableDAO
    + GetAllTables(GetTableRequestDTO request): Task<(List<GetTableResponseDTO>, TablePaginationDTO)>
}
class TableDAO {
    - _client.From<Table> : ISupabaseTable<Table>
    - _client.From<TableType> : ISupabaseTable<TableType>
    + GetAllTables(GetTableRequestDTO request): Task<(List<GetTableResponseDTO>, TablePaginationDTO)>
    + ApplyFilters(dynamic query, GetTableRequestDTO request): dynamic
}
class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}
APIGateway -- TableController
TableController -- ITableRepositories
ITableRepositories <|-- TableRepositories
TableRepositories "1"--"1..*" TableDAO
TableDAO "1"--"0..*" Table
TableDAO "1"--"0..*" TableType

@enduml